<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.1.4</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.example</groupId>
	<artifactId>docs-manager</artifactId>
	<version>2.0.6-SNAPSHOT</version>
	<name>docs-manager</name>
	<description>Documents manager that enables Upload and download of data</description>
	<properties>
		<java.version>21</java.version>
		<apache-tika.core.version>2.7.0</apache-tika.core.version>
		<commons-io.version>2.11.0</commons-io.version>
		<mockito-core.version>3.11.0</mockito-core.version>
 		<sprindoc-openapi-ui.version>2.0.4</sprindoc-openapi-ui.version>
		<archunit.version>1.1.0</archunit.version>
		<assertj-core.version>3.24.2</assertj-core.version>
		<equalsverifier.version>3.12.3</equalsverifier.version>
		<error-prone-core.version>2.22.0</error-prone-core.version>
		<error-prone-support.version>0.14.0</error-prone-support.version>
		<maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
		<testcontainers-elasticsearch.version>1.19.0</testcontainers-elasticsearch.version>
		<rest-assured.version>5.3.0</rest-assured.version>
		<maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
		<jakarta-json-api.version>2.1.1</jakarta-json-api.version>
		<fmt-maven-plugin.goal>check</fmt-maven-plugin.goal>
		<fmt-maven-plugin.version>2.21.1</fmt-maven-plugin.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-elasticsearch</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-cache</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>

		<!-- Caffeine caching library -->
		<dependency>
			<groupId>com.github.ben-manes.caffeine</groupId>
			<artifactId>caffeine</artifactId>
		</dependency>
		
		<dependency>
      		<groupId>org.apache.tika</groupId>
      		<artifactId>tika-core</artifactId>
      		<version>${apache-tika.core.version}</version>
    	</dependency>
    	<dependency>
      	<groupId>commons-io</groupId>
      		<artifactId>commons-io</artifactId>
      		<version>${commons-io.version}</version>
    	</dependency>

		<!-- Open API -->
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>${sprindoc-openapi-ui.version}</version>
		</dependency>

		<dependency>
			<groupId>jakarta.json</groupId>
			<artifactId>jakarta.json-api</artifactId>
			<version>${jakarta-json-api.version}</version>
		</dependency>
		
		<!-- Testing -->
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>rest-assured</artifactId>
			<version>${rest-assured.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
    		<groupId>com.tngtech.archunit</groupId>
    		<artifactId>archunit</artifactId>
    		<version>${archunit.version}</version>
    		<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.tngtech.archunit</groupId>
			<artifactId>archunit-junit5</artifactId>
			<version>${archunit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.tngtech.archunit</groupId>
			<artifactId>archunit-junit5-engine</artifactId>
			<version>${archunit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
		</dependency>
		<dependency>
   			 <groupId>org.mockito</groupId>
    		<artifactId>mockito-junit-jupiter</artifactId>
    		<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>nl.jqno.equalsverifier</groupId>
			<artifactId>equalsverifier</artifactId>
			<version>${equalsverifier.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>testcontainers</artifactId>
			<version>${testcontainers-elasticsearch.version}</version>
		</dependency>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>elasticsearch</artifactId>
			<version>${testcontainers-elasticsearch.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>${testcontainers-elasticsearch.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>${assertj-core.version}</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>build-info</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>io.github.git-commit-id</groupId>
				<artifactId>git-commit-id-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<configuration>
					<parallel>methods</parallel>
					<useUnlimitedThreads>true</useUnlimitedThreads>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<configuration>
					<skipTests>false</skipTests>
					<rerunFailingTestsCount>3</rerunFailingTestsCount>
					<includes>
						<include>**/*IT.java</include>
					</includes>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.spotify.fmt</groupId>
				<artifactId>fmt-maven-plugin</artifactId>
				<version>${fmt-maven-plugin.version}</version>
				<configuration>
					<sourceDirectory>src/main/java</sourceDirectory>
					<testSourceDirectory>src/test/java</testSourceDirectory>
					<verbose>true</verbose>
					<filesNamePattern>.*\.java</filesNamePattern>
					<skip>false</skip>
					<skipSortingImports>false</skipSortingImports>
					<style>google</style>
				</configuration>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>${fmt-maven-plugin.goal}</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<release>${java.version}</release>
					<showWarnings>true</showWarnings>
					<failOnWarning>false</failOnWarning>
					<compilerArgs>
						<arg>-Xplugin:ErrorProne</arg>
						<arg>-XDcompilePolicy=simple</arg>
					</compilerArgs>
					<annotationProcessorPaths>
						<path>
							<groupId>com.google.errorprone</groupId>
							<artifactId>error_prone_core</artifactId>
							<version>${error-prone-core.version}</version>
						</path>
						<path>
							<groupId>tech.picnic.error-prone-support</groupId>
							<artifactId>error-prone-contrib</artifactId>
							<version>${error-prone-support.version}</version>
						</path>
						<path>
							<groupId>tech.picnic.error-prone-support</groupId>
							<artifactId>refaster-runner</artifactId>
							<version>${error-prone-support.version}</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
